Had to fix the spacing between the user partial; was driving me nuts!

--- a/sass/screen.sass
+++ b/sass/screen.sass
@@ -34,6 +34,7 @@ body
   +clearfix
   background-color: #dddddd
   padding: 10px
+  margin: 10px 0px
 
   img
     +float-left
